- fixed product search visibility on mobile - message input backgroudn color is now transparent

--- a/aiva-chatbot/frontend/src/App.css
+++ b/aiva-chatbot/frontend/src/App.css
@@ -172,6 +172,7 @@ ul {
 /*TUOTEHAUN ASETUKSIA */
 .perustuotehaku {
   padding: 10px;
+  margin-bottom: 50px;
   border: dotted 5px black;
   color: white;
   background-color: darkblue;
